Updating Foursquare Keys

--- a/app/views/queries/create.html.erb
+++ b/app/views/queries/create.html.erb
@@ -1,4 +1,5 @@
-This should return up to 20 restaurants near your location.<br/><br/>
+This should return up to 20 restaurants near your location.<br/>
+<%= link_to 'Click here to go to the homepage', root_path %><br/><br/>
 
 <% i = 1 %>
 <%= @parsed_query["response"]["venues"].map do |restaurant| %>
