--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,4 +1,5 @@
 <h1>This is a list of your favorite restaurants!</h1>
+<%= link_to 'Click here to go to the homepage', root_path %><br/><br/>
 
 <% @restaurants.map do |restaurant| %>
   Name: <%= restaurant.name %><br/>
